Align hook in check-boxes correctly in firefox.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/mixins.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/mixins.css
@@ -260,6 +260,7 @@
     border: 2px solid @border-color;
     border-radius: 3px;
     background-color: @control-background-color;
+    text-align: center;
   }
 
   .checkbox-disabled() {
